[metadata]
name = pyramid-signed-params
description = Cryptographically signed query parameters for pyramid
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
url = https://github.com/dairiki/pyramid_signed_params
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = web pyramid cryptography query_string
license = BSD
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pyramid
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    pyramid_signed_params
    pyramid_signed_params.tests
python_requires = >= 3.7
install_requires =
    pyjwt>=1.3
    pyramid
    pyramid_services

